force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/CRMforNonProfit__NNOSettingsCSAS__c.object-meta.xml
<CustomObject>
    <label>NNOSettingsCSAS</label>
    <nameField>
        <label>Popis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NNOSettingsCSAS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>