force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__CSAS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_Account_Number__c</fullName>
    <description>ČSAS číslo účtu pro načítání výpisů přes Databanking 24</description>
    <label>ČSAS Číslo účtu</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>