force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__CSAS_Cislo_posl_nactene_stranky_vypisu__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_Cislo_posl_nactene_stranky_vypisu__c</fullName>
    <description>Číslo poslední načtené stránky (á 100 transakcí) výpisu z banky. Prázdná hodnota značí, že byly zpracovány všechny stránky.</description>
    <label>ČSAS Číslo posl. načtené stránky výpisu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>