force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__CSAS_Datum_Posledniho_Vypisu__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_Datum_Posledniho_Vypisu__c</fullName>
    <description>ČSAS Datum posledního načtení výpisu přes Databanking 24</description>
    <label>ČSAS Datum posledního načteného výpisu</label>
    <required>true</required>
    <type>Date</type>
</CustomField>