force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__CSAS_Password__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_Password__c</fullName>
    <description>Heslo pro přístup k ČSAS Databanking 24</description>
    <label>ČSAS Heslo</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>