force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__CSAS_UserName__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_UserName__c</fullName>
    <description>ČSAS Číslo klienta pro přístup k Databanking 24</description>
    <label>ČSAS Číslo klienta</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>