force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__CSAS_WS__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__CSAS_WS__c</fullName>
    <description>URL služby ČSAS Databanking 24</description>
    <label>ČSAS WS</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>