force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/fields/CRMforNonProfit__NNOSettings__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__NNOSettings__c</fullName>
    <label>NNOSettings</label>
    <referenceTo>CRMforNonProfit__NNOSettings__c</referenceTo>
    <relationshipLabel>NNOSettingsCSAS</relationshipLabel>
    <relationshipName>NNOSettingsCSAS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>