force-app/main/default/objects/CRMforNonProfit__NNOSettingsCSAS__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>NAME</columns>
    <columns>CRMforNonProfit__CSAS_Account_Number__c</columns>
    <columns>CRMforNonProfit__CSAS_UserName__c</columns>
    <columns>CRMforNonProfit__CSAS_Cislo_posl_nactene_stranky_vypisu__c</columns>
    <columns>CRMforNonProfit__CSAS_Datum_Posledniho_Vypisu__c</columns>
    <columns>CRMforNonProfit__CSAS_Password__c</columns>
    <columns>CRMforNonProfit__CSAS_WS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>